k8s/base/service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: app-blue
spec:
  type: ClusterIP
  selector:
    app: myapp
    version: blue
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
