k8s/base/service-green.yml
apiVersion: v1
kind: Service
metadata:
  name: app-green
spec:
  type: ClusterIP
  selector:
    app: myapp
    version: green
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
